@@ -88,6 +88,7 @@ o import only required C headers and put local headers on top to check
 o fix double free() bug in the error output path of mcast_create()
 o eliminate unsed cache_get_conntrack() in rs_list_to_tx()
 o remove capability code and rely on the error returned by the syscall
+o use fputs() instead of fprintf() in log.c
 
 version 0.9.5 (2007/07/29)
 ------------------------------
